tests/reference/asr-test_compare_01-c594bbe.stderr
semantic error: Comparison operator not supported between instances of 'i16' and 'f32'
 --> tests/errors/test_compare_01.py:6:11
  |
6 |     print(i16(x) > f32(y))
  |           ^^^^^^^^^^^^^^^ 
